<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearlayout_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_datebefore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/date_before" />

        <Button
            android:id="@+id/button_datechoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:text="@string/date_choose" />

        <Button
            android:id="@+id/button_datenext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/date_next" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/linearlayout_date"
        android:background="#D3D3D3" />

    <LinearLayout
        android:id="@+id/linearlayout_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/linearlayout_date"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_title_time"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_time"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/textview_title_curriculum_details"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/title_curriculum_details"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/textview_title_address"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/title_address"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/linearlayout_title"
        android:background="#D3D3D3" />

    <ListView
        android:id="@+id/listView_weekly_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearlayout_title"
        android:layout_marginTop="2dp" >
    </ListView>

</RelativeLayout>