<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:id="@+id/linearlayout_class_config"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/title_modify"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearlayout_class_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textview_class_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/str_class"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="#D3D3D3" />

            <EditText
                android:id="@+id/editText_class_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_class_teacher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textview_class_teacher"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/class_teacher"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="#D3D3D3" />

            <EditText
                android:id="@+id/editText_class_teacher"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginTop="20dp"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:background="@drawable/btn_ok_selector"
                android:gravity="center"
                android:text="@string/ok" />

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/btn_cancel_selector"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
