<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearlayout_date_classconfig"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_title_tar_time_classconfig"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/menu_config_class" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/linearlayout_date_classconfig"
        android:background="#D3D3D3" />

    <LinearLayout
        android:id="@+id/linearlayout_title_classconfig"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/linearlayout_date_classconfig"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_class_classconfig"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_class"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/textview_teacher_classconfig"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/class_teacher"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/linearlayout_title_classconfig"
        android:background="#D3D3D3" />

    <ListView
        android:id="@+id/listView_data_classconfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearlayout_title_classconfig"
        android:layout_marginTop="2dp" >
    </ListView>

</LinearLayout>